More Items and Drop rates + Travel subcommand